fix: update background colors in globals.css for better contrast and accessibility; make chevron prop optional in MultiComboboxTriggerButton

--- a/www/app/globals.css
+++ b/www/app/globals.css
@@ -44,33 +44,30 @@
 
   /* Background */
   --background: oklch(1 0 0);
-  --background-secondary: oklch(0.97 0.005 270);
-
+  --background-secondary: oklch(0.95 0 0);
+  
   /* Border */
   --border: oklch(90% 0.007 270);
-  
   /* Text */
   --foreground: oklch(0.145 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-
   /* Button, Input */
-  --primary: oklch(0.627 0.200 264.4);
+  --primary: oklch(0.627 0.2 264.4);
   --primary-foreground: oklch(1 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.627 0.233 29.2);
   --destructive-foreground: oklch(1 0 0);
-
   /* Popover, Dialog, Toast... */
-  --popover: oklch(0.95 0 0);
+  --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.2 0 0);
 }
 
 .dark {
   /* Background */
   --background: oklch(0 0 0);
-  --background-secondary: oklch(0.16 0.005 270);
+  --background-secondary: oklch(0.18 0 0);
 
   /* Border */
   --border: oklch(100% 0.00011 271.152 / 0.123);
